--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/index.4d97900c.css">
   </head>
   <body>
+    <p>i got ur ip lol </p>
     <div id="app"></div>
     
   </body>
